--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
-numpy==1.26.0
+colorama==0.4.6
+filelock==3.12.4
+fsspec==2023.9.2
+Jinja2==3.1.2
+joblib==1.3.2
+llvmlite==0.41.0
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.1
+numba==0.58.0
+numpy==1.25.2
 packaging==23.2
 pandas==2.1.1
 plotly==5.17.0
+pynndescent==0.5.10
 python-dateutil==2.8.2
 pytz==2023.3.post1
+scikit-learn==1.3.1
 scipy==1.11.3
 six==1.16.0
+sympy==1.12
 tenacity==8.2.3
+threadpoolctl==3.2.0
+torch==2.1.0
+tqdm==4.66.1
+typing_extensions==4.8.0
 tzdata==2023.3
+umap-learn==0.5.4
